--- a/css/general.css
+++ b/css/general.css
@@ -12,6 +12,11 @@
   margin: 0;
 }
 
+html {
+  display: flex;
+  justify-content: center;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
   font-weight: 500;
@@ -28,14 +33,13 @@ body {
   justify-content: center;
   align-items: center;
   padding: 5px;
+  max-width: 2000px;
 }
 
 header,
 main {
   padding: 0 350px;
   width: 100%;
-  max-width: 2000px;
-  box-sizing: border-box;
 }
 
 ul {
@@ -110,7 +114,7 @@ hr.Light-line {
 
 .box-flex {
   padding: 10px;
-  margin-bottom: 20px;
+  margin-top: 5px;
   position: relative;
 }
 
@@ -177,18 +181,18 @@ section.one .articles::after {
 .box-flex::before {
   content: "";
   position: absolute;
-  width: 100%;
+  width: 96%;
   border-top: 1px solid rgba(0, 0, 0, 0.2);
-  bottom: 0;
-  left: 0;
+  top: 0;
+  left: 15px;
 }
 
-.tow-article {
-  padding-bottom: 80px;
+.tow-article- {
+  padding-bottom: 50px;
   border-bottom: 1px solid black;
 }
 
-.tow-article::after {
+.tow-article-::after {
   content: "";
   position: absolute;
   height: 72%;
